--- a/dashboard professor/byrushan.com/projects/material-admin/app/2.5/hidden-sidebar.html
+++ b/dashboard professor/byrushan.com/projects/material-admin/app/2.5/hidden-sidebar.html
@@ -85,7 +85,6 @@
                     </li>
 
                     <li>
-                        <!-- <button class="btn btn-light" data-toggle="modal" data-target="#modal-default">Default modal</button> -->
                         <a href='#modal-default' data-toggle="modal" data-target="#modal-default">
                             <i class='zmdi zmdi-lock-outline'></i> Senha
                         </a>
@@ -96,63 +95,70 @@
 
         <section class='content content--full'>
 
+            <div class="row quick-stats">
+                <div class="col-sm-6 col-md-3">
+                    <div class="quick-stats__item bg-blue">
+                        <div class="quick-stats__info">
+                            <h2>987,459</h2>
+                            <small>Total de Aulas</small>
+                        </div>
 
-            <div class="card card--inverse widget-pie">
-                <div class="col-6 col-sm-4 col-md-6 col-lg-4 widget-pie__item">
-                    <div class="easy-pie-chart" data-percent="50" data-size="80" data-track-color="rgba(0,0,0,0.08)"
-                        data-bar-color="#fff">
-                        <span class="easy-pie-chart__value">92</span>
+                        <div class="quick-stats__chart sparkline-bar-stats">6,4,8,6,5,6,7,8,3,5,9,5</div>
                     </div>
-                    <div class="widget-pie__title">Email<br> Scheduled</div>
                 </div>
 
-                <div class="col-6 col-sm-4 col-md-6 col-lg-4 widget-pie__item">
-                    <div class="easy-pie-chart" data-percent="11" data-size="80" data-track-color="rgba(0,0,0,0.08)"
-                        data-bar-color="#fff">
-                        <span class="easy-pie-chart__value">11</span>
+                <div class="col-sm-6 col-md-3">
+                    <div class="quick-stats__item bg-amber">
+                        <div class="quick-stats__info">
+                            <h2>356,785K</h2>
+                            <small>Total de Horas</small>
+                        </div>
+
+                        <div class="quick-stats__chart sparkline-bar-stats">4,7,6,2,5,3,8,6,6,4,8,6</div>
                     </div>
-                    <div class="widget-pie__title">Email<br> Bounced</div>
                 </div>
 
-                <div class="col-6 col-sm-4 col-md-6 col-lg-4 widget-pie__item">
-                    <div class="easy-pie-chart" data-percent="52" data-size="80" data-track-color="rgba(0,0,0,0.08)"
-                        data-bar-color="#fff">
-                        <span class="easy-pie-chart__value">52</span>
+                <div class="col-sm-6 col-md-3">
+                    <div class="quick-stats__item bg-purple">
+                        <div class="quick-stats__info">
+                            <h2>$58,778</h2>
+                            <small>Total de Turmas Atendidas</small>
+                        </div>
+
+                        <div class="quick-stats__chart sparkline-bar-stats">9,4,6,5,6,4,5,7,9,3,6,5</div>
                     </div>
-                    <div class="widget-pie__title">Email<br> Opened</div>
                 </div>
 
-                <div class="col-6 col-sm-4 col-md-6 col-lg-4 widget-pie__item">
-                    <div class="easy-pie-chart" data-percent="44" data-size="80" data-track-color="rgba(0,0,0,0.08)"
-                        data-bar-color="#fff">
-                        <span class="easy-pie-chart__value">44</span>
-                    </div>
-                    <div class="widget-pie__title">Storage<br>Remaining</div>
-                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="quick-stats__item bg-red">
+                        <div class="quick-stats__info">
+                            <h2>214</h2>
+                            <small>Total de Alunos Atendidos</small>
+                        </div>
 
-                <div class="col-6 col-sm-4 col-md-6 col-lg-4 widget-pie__item">
-                    <div class="easy-pie-chart" data-percent="78" data-size="80" data-track-color="rgba(0,0,0,0.08)"
-                        data-bar-color="#fff">
-                        <span class="easy-pie-chart__value">78</span>
+                        <div class="quick-stats__chart sparkline-bar-stats">5,6,3,9,7,5,4,6,5,6,4,9</div>
                     </div>
-                    <div class="widget-pie__title">Web Page<br> Views</div>
-                </div>
-
-                <div class="col-6 col-sm-4 col-md-6 col-lg-4 widget-pie__item">
-                    <div class="easy-pie-chart" data-percent="32" data-size="80" data-track-color="rgba(0,0,0,0.08)"
-                        data-bar-color="#fff">
-                        <span class="easy-pie-chart__value">32</span>
-                    </div>
-                    <div class="widget-pie__title">Server<br> Processing</div>
                 </div>
             </div>
 
             <div class='row'>
+
                 <div class='col-md-6'>
                     <div class='card'>
                         <div class='card-body'>
-                            <h4 class='card-title'>Sales Statistics</h4>
-                            <h6 class='card-subtitle'>Vestibulum purus quam scelerisque, mollis nonummy metus</h6>
+                            <h4 class='card-title'>Estatística Mensal</h4>
+                            <h6 class='card-subtitle'>Quantidade de aulas neste mês</h6>
+
+                            <div class="flot-chart flot-bar"></div>
+                                <div class="flot-chart-legends flot-chart-legends--bar"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class='col-md-6'>
+                    <div class='card'>
+                        <div class='card-body'>
+                            <h4 class='card-title'>Estatísticas Mensais</h4>
+                            <h6 class='card-subtitle'>Quantidade de aulas por mês</h6>
 
                             <div class='flot-chart flot-curved-line'></div>
                             <div class='flot-chart-legends flot-chart-legends--curved'></div>
@@ -160,18 +166,6 @@
                     </div>
                 </div>
 
-                <div class='col-md-6'>
-                    <div class='card'>
-                        <div class='card-body'>
-                            <h4 class='card-title'>Growth Rate</h4>
-                            <h6 class='card-subtitle'>Commodo luctus nisi erat porttitor ligula eget lacinia odio
-                                semnec elit</h6>
-
-                            <div class='flot-chart flot-line'></div>
-                            <div class='flot-chart-legends flot-chart-legends--line'></div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -256,27 +250,213 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollbar/0.2.11/jquery.scrollbar.min.js'></script>
 
-    <script src='vendors/bower_components/jquery-scrollLock/jquery-scrollLock.min.js'></script>
-
     <!-- Charts Simple-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.resize.min.js'></script>
-    <script src='vendors/bower_components/flot.curvedlines/curvedLines.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.categories.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.min.js'></script>
 
+    <script src='vendors/bower_components/flot.curvedlines/curvedLines.js'></script>
+    <script src='vendors/bower_components/flot.curvedlines/jquery.flot.orderBars.js'></script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/salvattore/1.0.9/salvattore.min.js'></script>
-
-    <!-- Charts and maps-->
-    <script src='demo/js/flot-charts/curved-line.js'></script>
-    <script src='demo/js/flot-charts/dynamic.js'></script>
-    <script src='demo/js/flot-charts/line.js'></script>
-    <script src='demo/js/flot-charts/chart-tooltips.js'></script>
-    <script src='demo/js/other-charts.js'></script>
-    <script src='demo/js/jqvmap.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
 
     <!-- App functions and actions -->
     <script src='js/app.min.js'></script>
 
+
+    <script>
+        var curvedLineChartData = [{
+            color: '#00BCD4',
+            lines: {
+                show: true,
+                lineWidth: 0.1,
+                fill: 1,
+                fillColor: {
+                    colors: ['rgba(0,188,212,0.001)', '#00BCD4']
+                }
+            },
+            data: [
+                [new Date('01/01/2018'), 80],
+                [new Date('02/02/2018'), 30],
+                [new Date('03/03/2018'), 70],
+                [new Date('04/04/2018'), 10],
+                [new Date('05/05/2018'), 80],
+                [new Date('06/06/2018'), 10],
+                [new Date('09/09/2018'), 50]
+            ]
+        }];
+
+
+        var curvedLineChartOptions = {
+            series: {
+                lines: {
+                    show: true
+                },
+                curvedLines: {
+                    apply: true,
+                    active: true,
+                    monotonicFit: true
+                },
+            },
+            xaxis: {
+                mode: "time",
+                timeformat: "%d/%m/%Y",
+                tickLength: 0,
+                tickColor: '#fff',
+                tickDecimals: 0,
+                font: {
+                    lineHeight: 13,
+                    style: 'normal',
+                    color: '#999999',
+                    size: 11
+                },
+            },
+            grid: {
+                borderWidth: 1,
+                borderColor: '#edf9fc',
+                show: true,
+                hoverable: true,
+                clickable: true
+            },
+            yaxis: {
+                tickColor: '#edf9fc',
+                font: {
+                    lineHeight: 13,
+                    style: 'normal',
+                    color: '#999999',
+                    size: 11
+                },
+                min: +5
+            },
+            legend: {
+                container: '.flot-chart-legends--curved',
+                backgroundOpacity: 0.5,
+                noColumns: 0,
+                backgroundColor: '#fff',
+                lineWidth: 0,
+                labelBoxBorderColor: '#fff'
+            }
+        };
+    </script>
+
+    <script>
+        if ($('.flot-curved-line')[0]) {
+            $.plot($('.flot-curved-line'), curvedLineChartData, curvedLineChartOptions);
+        }
+    </script>
+
+    <script>
+         var barChartData = [
+        {
+            label: 'Green',
+            data: [[1,60], [2,30], [3,50], [4,100], [5,10], [6,90], [7,85]],
+            color: '#32c787',
+            bars: {
+                order: 0
+            }
+        },
+        {
+            label: 'Blue',
+            data: [[1,20], [2,90], [3,60], [4,40], [5,100], [6,25], [7,65]],
+            color: '#03A9F4',
+            bars: {
+                order: 1
+            }
+        },
+        {
+            label: 'Amber',
+            data: [[1,100], [2,20], [3,60], [4,90], [5,80], [6,10], [7,5]],
+            color: '#f5c942',
+            bars: {
+                order: 2
+            }
+        }
+    ];
+
+    // Chart Options
+    var barChartOptions = {
+        series: {
+            bars: {
+                show: true,
+                barWidth: 0.05,
+                fill: 1
+            }
+        },
+        grid : {
+            borderWidth: 1,
+            borderColor: '#f8f8f8',
+            show : true,
+            hoverable : true,
+            clickable : true
+        },
+        yaxis: {
+            tickColor: '#f8f8f8',
+            tickDecimals: 0,
+            font :{
+                lineHeight: 13,
+                style: "normal",
+                color: "#9f9f9f",
+            },
+            shadowSize: 0
+        },
+        xaxis: {
+            tickColor: '#fff',
+            tickDecimals: 0,
+            font :{
+                lineHeight: 13,
+                style: "normal",
+                color: "#9f9f9f"
+            },
+            shadowSize: 0,
+        },
+        legend:{
+            container: '.flot-chart-legends--bar',
+            backgroundOpacity: 0.5,
+            noColumns: 0,
+            backgroundColor: '#fff',
+            lineWidth: 0,
+            labelBoxBorderColor: '#fff'
+        }
+    };
+
+    // Create chart
+    if ($('.flot-bar')[0]) {
+        $.plot($('.flot-bar'), barChartData, barChartOptions);
+    }
+    </script>
+
+    <script>
+        if ($('.flot-chart')[0]) {
+            $('.flot-chart').bind('plothover', function (event, pos, item) {
+                if (item) {
+                    var x = item.datapoint[0].toFixed(2),
+                        y = item.datapoint[1].toFixed(2);
+                    $('.flot-tooltip').html(y).css({
+                        top: item.pageY + 5,
+                        left: item.pageX + 5
+                    }).show();
+                } else {
+                    $('.flot-tooltip').hide();
+                }
+            });
+
+            $('<div class="flot-tooltip"></div>').appendTo('body');
+        }
+    </script>
+
+    <script>
+        if ($('.sparkline-bar-stats')[0]) {
+            $('.sparkline-bar-stats').sparkline('html', {
+                type: 'bar',
+                height: 36,
+                barWidth: 3,
+                barColor: '#fff',
+                barSpacing: 2
+            });
+        }
+    </script>
 
     <script>
         $('form').submit(function (event) {
@@ -288,7 +468,6 @@
             console.log(JSON.stringify(json))
             event.preventDefault();
         });
-
     </script>
 </body>
 
